--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,11 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Gemini AI Configuration
+GEMINI_API_KEY=AIzaSyC7trWsLc9PqlYa9gNuqtDB6QaS5kXAX1Y
+
+# Telescope Configuration (disabled for CLI scripts)
+TELESCOPE_ENABLED=false
+
+
 VITE_APP_NAME="${APP_NAME}"
