--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,14 @@
-APP_NAME=Laravel
+APP_NAME=Waste2Product
 APP_ENV=local
-APP_KEY=base64:ldDqVnS85JKeHTBOIXnOlCHt2B3tK64WMS9Ai7fvOsQ=
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -20,12 +19,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Database - Docker configuration
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=waste2product
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -38,9 +38,6 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
@@ -63,10 +60,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 # Gemini AI Configuration
-GEMINI_API_KEY=AIzaSyC7trWsLc9PqlYa9gNuqtDB6QaS5kXAX1Y
+GEMINI_API_KEY=your_gemini_api_key_here
 
 # Telescope Configuration (disabled for CLI scripts)
 TELESCOPE_ENABLED=false
-
 
 VITE_APP_NAME="${APP_NAME}"
