--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,15 @@
 # ====================================
-# Configuration SonarCloud
+# Configuration SonarQube
 # ====================================
+# Note: sonar.host.url et sonar.login sont définis via GitHub Secrets
+# SONAR_HOST_URL = URL de votre SonarQube local (ex: http://localhost:9000)
+# SONAR_TOKEN = Token d'authentification SonarQube
 
-# Organisation SonarCloud (à remplacer par la vôtre)
-# Trouvez-la sur : https://sonarcloud.io/account/organizations
-sonar.organization=VOTRE_ORGANIZATION_KEY
-
-# Clé du projet (généré automatiquement par SonarCloud)
-sonar.projectKey=YassineEssid_Waste2Product
+# Clé du projet
+sonar.projectKey=waste2product
 
 # Nom du projet
 sonar.projectName=Waste2Product
-
-# URL SonarCloud
-sonar.host.url=https://sonarcloud.io
 
 # ====================================
 # Source Code Configuration
