fix: Add missing Reverb configuration to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Waste2Product
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ePDlGzYqGpEiSYiV9vy/vSghzfSDp9vv2luMa0pNROw=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
 
@@ -38,6 +38,20 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
+
+# Reverb Configuration
+REVERB_APP_ID=waste2product
+REVERB_APP_KEY=local-key
+REVERB_APP_SECRET=local-secret
+REVERB_HOST=localhost
+REVERB_PORT=8080
+REVERB_SCHEME=http
+REVERB_ALLOWED_ORIGINS=*
+
+VITE_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VITE_REVERB_HOST="${REVERB_HOST}"
+VITE_REVERB_PORT="${REVERB_PORT}"
+VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
