fix: Disable Reverb in CI by overriding BROADCAST_CONNECTION env var

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,11 +41,10 @@ jobs:
       - name: Install Dependencies
         run: composer install --prefer-dist --no-progress --no-interaction
 
-      - name: Copy .env and generate key
+      - name: Prepare environment
         run: |
           cp .env.example .env
           php artisan key:generate
-          php artisan config:clear
 
       - name: Execute tests with coverage
         run: php artisan test --coverage --coverage-clover=coverage/clover.xml --coverage-html=coverage/html
@@ -56,6 +55,8 @@ jobs:
           DB_DATABASE: waste2product_test
           DB_USERNAME: root
           DB_PASSWORD: root
+          BROADCAST_CONNECTION: log
+          QUEUE_CONNECTION: sync
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
