--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,7 +47,7 @@ jobs:
           echo "APP_KEY=base64:$(openssl rand -base64 32)" >> .env
 
       - name: Execute tests with coverage
-        run: php artisan test --coverage --coverage-clover=coverage/clover.xml --coverage-html=coverage/html
+        run: vendor/bin/phpunit --coverage-clover=coverage/clover.xml --coverage-html=coverage/html
         env:
           DB_CONNECTION: mysql
           DB_HOST: 127.0.0.1
@@ -55,8 +55,6 @@ jobs:
           DB_DATABASE: waste2product_test
           DB_USERNAME: root
           DB_PASSWORD: root
-          BROADCAST_CONNECTION: log
-          QUEUE_CONNECTION: sync
 
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
