--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,10 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: ${DOCKER_USERNAME:-ghothmen}/waste2product:latest
     container_name: waste2product_app
     restart: unless-stopped
     working_dir: /var/www/html
     volumes:
-      - .:/var/www/html
       - ./storage:/var/www/html/storage
     depends_on:
       db:
