--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
 # ====================================
-# Configuration SonarQube
+# Configuration SonarCloud
 # ====================================
-# Note: sonar.host.url et sonar.login sont définis via GitHub Secrets
-# SONAR_HOST_URL = URL de votre SonarQube local (ex: http://localhost:9000)
-# SONAR_TOKEN = Token d'authentification SonarQube
+
+# Organization SonarCloud (à récupérer sur sonarcloud.io)
+sonar.organization=yassineessid
 
 # Clé du projet
-sonar.projectKey=waste2product
+sonar.projectKey=YassineEssid_Waste2Product
 
 # Nom du projet
 sonar.projectName=Waste2Product
