fix: Update sonar exclusions to include database migrations, seeders, and factories

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,10 +22,13 @@ sonar.sources=app
 sonar.tests=tests
 
 # Exclusions (fichiers à ne pas analyser)
-sonar.exclusions=vendor/**,storage/**,node_modules/**,bootstrap/cache/**,public/**
+sonar.exclusions=vendor/**,storage/**,node_modules/**,bootstrap/cache/**,public/**,database/migrations/**,database/seeders/**,database/factories/**
 
 # Inclusion des tests
 sonar.test.inclusions=tests/**/*Test.php
+
+# Exclusions de la couverture (fichiers dont on n'exige pas de couverture)
+sonar.coverage.exclusions=database/**,config/**,routes/**,bootstrap/**,resources/**
 
 # ====================================
 # Coverage Configuration
