fix: Update Docker configuration to use custom database image and add backup.sql for initialization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - waste2product
 
   db:
-    image: mysql:8
+    image: gbothmen/waste2product-db:latest
     container_name: waste2product_db
     restart: unless-stopped
     environment:
