--- a/.env.example
+++ b/.env.example
@@ -74,9 +74,9 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 # Gemini AI Configuration
-GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_API_KEY=AIzaSyC7trWsLc9PqlYa9gNuqtDB6QaS5kXAX1Y
 
 # Telescope Configuration (disabled for CLI scripts)
 TELESCOPE_ENABLED=false
 
-VITE_APP_NAME="${APP_NAME}"
+VITE_APP_NAME="${APP_NAM
