--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,14 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
+    # Laravel storage symlink - MUST be before other static file rules
+    location /storage/ {
+        alias /var/www/html/storage/app/public/;
+        try_files $uri =404;
+        expires 7d;
+        add_header Cache-Control "public";
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
@@ -29,21 +37,16 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
-        
+
         # Timeouts
         fastcgi_connect_timeout 60s;
         fastcgi_send_timeout 180s;
         fastcgi_read_timeout 180s;
-        
+
         # Buffer size
         fastcgi_buffer_size 128k;
         fastcgi_buffers 4 256k;
         fastcgi_busy_buffers_size 256k;
-    }
-
-    # Laravel storage symlink
-    location ~ ^/storage/(.*)$ {
-        try_files /storage/$1 =404;
     }
 
     # Deny access to hidden files
@@ -58,8 +61,8 @@ server {
         deny all;
     }
 
-    # Cache static assets
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+    # Cache static assets (except /storage/)
+    location ~* ^/(?!storage/).+\.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         expires 7d;
         add_header Cache-Control "public, immutable";
         access_log off;
